# project_Spark

./: README.md  kafka_streaming.py  pyproject.toml  spark_streaming.py
browser/: browser.py
config/: kafka_config.py  postgres_config.py
consumer/: kafka_consumer.py
jobs/: spark_streaming.py
producer/: kafka_producer.py
schemas/: event_schema.py
transformation/: product_view.py
utils/: config.py  logger.py
writers/: postgres_writer.py
